# BENG207_ORGANOIDS_MODEL

./: CONTRI'G.md  README.md  analysis.py  experimental_setup_guide.md  final_words.md  meson.build  org.gnome.Example.json
PLOT_CSV/: org_fig10_phase_sweep.csv  org_fig1_single_pulse.csv  org_fig2_pulse_train.csv  org_fig3_peak_vs_duration.csv  org_fig4_sensitivity.csv  org_fig5_protocols.csv  org_fig6_diameter.csv  org_fig7_stress_sweep.csv  org_fig8_stress_comparison.csv  org_fig9a_biaxial_single_pulse.csv  org_fig9b_biaxial_pulse_train.csv  plot_organoid_kv.gp
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
po/: POTFILES.in  meson.build
src/: beng297_3-application.c  beng297_3-application.h  beng297_3-window.c  beng297_3-window.h  beng297_3-window.ui  beng297_3.gresource.xml  main.c  meson.build
